kit/blueprint/styles.scss
@import '~@blueprintjs/core/src/common/react-transition';

//------------------------
// Tabs
//------------------------
.bp5-tab-panel > div {
  margin: 0 !important; // TODO - investigate this....
}

.bp5-tab > svg:first-child {
  margin-right: var(--xh-pad-half-px);
}

// Vertical tab lists fill their width
.bp5-tabs.bp5-vertical .bp5-tab-list {
  flex: 1;
}

//------------------------
// Dialogs, Popovers, Masking
//------------------------
.bp5-dialog {
  padding-bottom: 0;
  border-radius: var(--xh-border-radius-px);
  border: var(--xh-popup-border-width-px) solid var(--xh-popup-border-color);

  .bp5-dialog-header {
    color: var(--xh-popup-title-text-color);
    background-color: var(--xh-popup-title-bg);
    font-family: var(--xh-popup-title-font-family);
    font-size: var(--xh-popup-title-font-size-px);
    padding-left: var(--xh-pad-px);
    border-top-right-radius: var(--xh-border-radius-px);
    border-top-left-radius: var(--xh-border-radius-px);

    .bp5-heading,
    .bp5-icon {
      color: var(--xh-popup-title-text-color);
    }

    > svg:first-child {
      margin-right: var(--xh-pad-px);
    }
  }

  .bp5-dialog-body {
    margin: 0;
    padding: var(--xh-pad-double-px);
    background: var(--xh-popup-bg);
    word-break: break-word;
  }
}

// Customized here for backdrops behind dialogs.
// Note that masks use their own CSS var, set in Mask.scss.
.bp5-overlay-backdrop:not(.bp5-popover-backdrop) {
  background-color: var(--xh-backdrop-bg);
}

// Squelch popover scale transition - unlike Dialog with its `transitionName` prop, Popover
// does not appear to provide a way to turn off its transition without also losing the (often
// desirable) arrow pointing to its target. Variables below required for the include to function.
$pt-transition-ease: cubic-bezier(0.4, 1, 0.75, 0.9) !default;
$pt-transition-ease-bounce: cubic-bezier(0.54, 1.12, 0.38, 1.11) !default;
$pt-transition-duration: 100ms !default;

// This override is taken from the popover source SCSS - there it is scoped under the minimal class.
// https://github.com/palantir/blueprint/blob/1bfd1e42303d2626bfc3923eec2195ab4dc696d2/packages/core/src/components/popover/_popover.scss#L54
.bp5-popover {
  @include react-transition(
    'bp5-popover',
    (
      transform: scale(1) scale(1)
    ),
    $duration: 0,
    $after: '> &'
  );
}

//------------------------
// Menus
//------------------------
.bp5-dark .bp5-menu,
.bp5-menu {
  background-color: var(--xh-menu-bg);
  border: var(--xh-menu-border);
  color: var(--xh-menu-item-text-color);

  .bp5-menu-item {
    // Default alignment of flex-start leaves Hoist icons shifted up - could target
    // more specifically if this is a problem in any other contexts.
    align-items: center;
    color: var(--xh-menu-item-text-color);
    padding: 5px 10px;

    .bp5-menu-item-icon {
      color: inherit;
    }

    &:hover {
      background-color: var(--xh-menu-item-highlight-bg);
      border-radius: 0;
    }

    &.bp5-intent-primary {
      color: var(--xh-intent-primary);
    }

    &.bp5-intent-success {
      color: var(--xh-intent-success);
    }

    &.bp5-intent-warning {
      color: var(--xh-intent-warning);
    }

    &.bp5-intent-danger {
      color: var(--xh-intent-danger);
    }

    .xh-dark & {
      &.bp5-intent-primary {
        color: var(--xh-intent-primary-lighter);
      }

      &.bp5-intent-success {
        color: var(--xh-intent-success-lighter);
      }

      &.bp5-intent-warning {
        color: var(--xh-intent-warning-lighter);
      }

      &.bp5-intent-danger {
        color: var(--xh-intent-danger-lighter);
      }
    }
  }

  .bp5-submenu {
    padding: 0;
  }
}

.bp5-dark .bp5-menu-divider {
  border-color: rgba(255, 255, 255, 0.15) !important;
}

//------------------------
// Buttons
//------------------------
// See desktop/cmp/button/Button.scss for button styles.
// Rule below applies only to buttons within BP inputs to disable default hover background-color
// (which looks weird) and instead tweak the icon color to indicate it's active.
.xh-app .xh-input .bp5-input-group .xh-button {
  &.xh-button--minimal,
  &.xh-button--outlined {
    &.xh-button--enabled {
      &:hover {
        background-color: unset !important;

        svg {
          color: var(--xh-button-text-color) !important;
        }
      }
    }
  }
}

//------------------------
// Tooltips
//------------------------
.bp5-tooltip {
  &.bp5-intent-primary {
    .bp5-popover-content {
      background-color: var(--xh-intent-primary);
    }

    .bp5-popover-arrow-fill {
      fill: var(--xh-intent-primary);
    }
  }

  &.bp5-intent-danger {
    .bp5-popover-content {
      background-color: var(--xh-intent-danger);
    }

    .bp5-popover-arrow-fill {
      fill: var(--xh-intent-danger);
    }
  }

  &.bp5-intent-success {
    .bp5-popover-content {
      background-color: var(--xh-intent-success);
    }

    .bp5-popover-arrow-fill {
      fill: var(--xh-intent-success);
    }
  }

  &.bp5-intent-warning {
    .bp5-popover-content {
      background-color: var(--xh-intent-warning);
    }

    .bp5-popover-arrow-fill {
      fill: var(--xh-intent-warning);
    }
  }
}

//------------------------
// Forms + Inputs
//------------------------
.bp5-input,
.bp5-dark .bp5-input,
textarea.bp5-input,
.bp5-dark textarea.bp5-input,
.bp5-input-ghost {
  color: var(--xh-input-text-color);
  background: var(--xh-input-bg);
  font-size: var(--xh-font-size);

  &::placeholder {
    color: var(--xh-input-placeholder-text-color);
    opacity: 1;
  }

  // Use Hoist theme vars for disabled input styles.
  &.bp5-disabled,
  &:disabled {
    background-color: var(--xh-input-disabled-bg);
    color: var(--xh-input-disabled-text-color);
  }
}

// Expose CSS var for box-shadow tweaking
.bp5-input:not(.bp5-active):not(:focus) {
  box-shadow: var(--xh-form-field-box-shadow);
}

.bp5-control,
.bp5-dark .bp5-control {
  input:focus ~ .bp5-control-indicator {
    outline: var(--xh-form-field-focused-border-color) solid 1px !important;
    outline-offset: 1px;
  }
}

.bp5-slider-handle:focus {
  outline: unset; // override browser default styles
  box-shadow: var(--xh-slider-handle-focused-box-shadow);
}

.bp5-input:focus,
.bp5-dark .bp5-input:focus,
.bp5-dark textarea.bp5-input:focus {
  box-shadow: var(--xh-form-field-focused-box-shadow);
}

// Override Blueprint textarea and switch input dark theme
.bp5-dark textarea.bp5-input {
  box-shadow: var(--xh-form-field-box-shadow);
}

.bp5-dark .bp5-control.bp5-switch input ~ .bp5-control-indicator {
  box-shadow: var(--xh-form-field-box-shadow) !important;
}

.bp5-dark .bp5-control.bp5-switch:hover input ~ .bp5-control-indicator {
  background-color: #202b33;
}

/* Apply blueprint styling to non-blueprint icons within input groups */
.bp5-input-group {
  .xh-icon {
    position: absolute;
    top: 0;
    line-height: 1;
    font-size: var(--xh-font-size-large-px);
    font-weight: 400;
    font-style: normal;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    z-index: 1;
    margin: 7px;
    color: var(--xh-text-color-muted);
  }

  // Support direct use of a Hoist Icon as input `rightElement` prop - w/o the below, the icon SVG
  // will not be measured (clientWidth == 0) and the input's internal layout won't account for it.
  .bp5-input-action > .xh-icon {
    position: relative;
    display: block;
  }

  .bp5-button-group {
    margin-right: 3px;

    .bp5-button {
      margin-right: 0;
      margin-left: 0;
    }

    .xh-icon {
      margin-top: 4px;
    }
  }
}

/* Apply blueprint's z-index of 16 for icons within a control group */
.bp5-control-group .bp5-input-group svg:not(.bp5-icon) {
  z-index: 16;
}

// Controls ship with default bottom and (inline) right margins. We expose variables
// to customize and default those to 0 to avoid adding margins by default.
// Hoist theme text-color applied to elements not styled with a more specific selector.
.bp5-control {
  color: var(--xh-text-color);
  margin-bottom: var(--xh-form-field-margin-bottom);

  &.bp5-inline {
    margin-right: var(--xh-form-field-margin-right);
  }
}

//------------------------
// Misc
//------------------------
.bp5-hotkey-column {
  padding: var(--xh-pad-double-px);

  .bp5-heading {
    font-weight: normal;
    margin-top: 0;
  }
}

